<resources>
    <string name="app_name">Zhiliao</string>
    <string name="app_desc">A plugin for Zhihu</string>

    <string name="pref_general">General</string>
    <string name="pref_function">Function</string>
    <string name="pref_about">About</string>

    <string name="pref_mainswitch">Enable Zhiliao</string>
    <string name="pref_mainswitch_desc">Main switch of Zhiliao</string>

    <string name="pref_hideicon">Hide icon</string>
    <string name="pref_hideicon_desc">Hide icon in launcher</string>

    <string name="pref_language">Language</string>
    <string name="pref_language_auto">Auto</string>

    <string name="pref_launchad">Remove launch ad</string>
    <string name="pref_launchad_desc">Annoying full-screen advertisement</string>

    <string name="pref_feedad">Remove feed ad</string>
    <string name="pref_feedad_desc">DO NOT FEED AD TO ME</string>

    <string name="pref_marketcard">Remove market card</string>
    <string name="pref_marketcard_desc">I have no money to buy VIP</string>

    <string name="pref_answerlistad">Remove answer list ad</string>
    <string name="pref_answerlistad_desc">Remove ad in answer list</string>

    <string name="pref_sharead">Remove share ad</string>
    <string name="pref_sharead_desc">Remove ad above share page</string>

    <string name="pref_answerad">Remove answer ad</string>
    <string name="pref_answerad_desc">Remove advertisement in the footer</string>

    <string name="pref_club">Remove club info</string>
    <string name="pref_club_desc">Remove club info in the footer</string>

    <string name="pref_goods">Remove related goods</string>
    <string name="pref_goods_desc">Remove related goods in the footer (Experimental)</string>

    <string name="pref_version">Version</string>
    <string name="pref_author">Author</string>

    <string name="pref_telegram">Telegram</string>
    <string name="pref_telegram_desc">Discuss with us</string>

    <string name="pref_donate">Donate</string>
    <string name="pref_donate_desc">With appreciation</string>

    <string name="dialog_warnicon">Tip:\nYou can launch Zhiliao in Xposed Installer or EdXposed Manager</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_eula">EULA:\nThis software is for technical discussion use only, please do not use it for commercial and illegal purposes. If there is a legal dispute, it has nothing to do with me.\\nnThis software won\'t collect or upload your personal information. If your information get leaked, it has nothing to do with me.</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_reject">Reject</string>

</resources>
